<resources>
    <string name="advanced_help">
                 <![CDATA[
        <h3>Advanced</h3>
            <p>Create or import your own stuff here.</p>

            <h4>Export game database to sd-card</h4>
            <p>All games in the game database can be exported to a single PGN file on sd-card. This file
                will be named chess.pgn and an existing file will be overwritten.</p>

            <h4>Import games into the game database</h4>
            <p>Use this option to add games to the game database. It lets you browse to a PGN file. Select
                and choose to import.</p>

            <h4>Delete all games in the game database</h4>
            <p>Use this option if you want to clean up the game database. Make sure you first make a backup
                to sd-card, this action can not be undone.</p>

            <h4>Create practice set</h4>
            <p>Creates practice positions from games that end in a check-mate. Browse to the file to
                process. Failed entries are usually games that did not end in a check-mate or are a
                duplicate</p>

            <h4>Reset practice set</h4>
            <p>Want to start over practicing? This will also reset your average time counter.</p>

                ]]>
            </string>
    <string name="alert_no">No</string>
    <string name="alert_ok">OK</string>
    <string name="alert_yes">Yes</string>
    <string name="app_name">Chess</string>
    <string name="app_name_help">Help</string>
    <string name="app_name_import">Import</string>
    <string name="app_name_pgntools">Advanced</string>
    <string name="app_name_play">Play</string>
    <string name="app_name_playonline">Play online</string>
    <string name="app_name_save_games">Saved games</string>
    <string name="app_name_setup">Setup</string>
    <string name="attacked_by_pieces">Attacked by %1$s</string>
    <string name="defended_by_pieces">Defended by %1$s</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_close">Close</string>
    <string name="button_engine_play_description">Engine play</string>
    <string name="button_login">Login</string>
    <string name="button_menu_description">Menu</string>
    <string name="button_next_move_description">Next move</string>
    <string name="button_next_position">Next position</string>
    <string name="button_ok">OK</string>
    <string name="button_previous_move_description">Previous move</string>
    <string name="button_previous_position">Previous position</string>
    <string name="button_register">Register</string>
    <string name="button_reset_position">Reset position</string>
    <string name="button_save">Save</string>
    <string name="button_save_copy">Save copy</string>
    <string name="chessboard_hint_color_scheme">Color scheme</string>
    <string name="chessboard_hint_piece_set">Piece set</string>
    <string name="chessboard_hint_tile_effect">Tile effect</string>
    <string name="choice_delete">Delete</string>
    <string name="choice_edit">Edit</string>
    <string name="choice_level_1">1 sec</string>
    <string name="choice_level_10">15 minutes</string>
    <string name="choice_level_2">2 sec </string>
    <string name="choice_level_3">4 sec</string>
    <string name="choice_level_4">8 sec (average) </string>
    <string name="choice_level_5">10 sec</string>
    <string name="choice_level_6">20 sec</string>
    <string name="choice_level_7">30 sec (experienced) </string>
    <string name="choice_level_8">1 minute</string>
    <string name="choice_level_9">5 minutes</string>
    <string name="choice_random">Random</string>
    <string name="color_scheme_blue">Blue</string>
    <string name="color_scheme_brown">Brown</string>
    <string name="color_scheme_green">Green</string>
    <string name="color_scheme_grey">Grey</string>
    <string name="color_scheme_orange">Orange</string>
    <string name="color_scheme_pink">Pink</string>
    <string name="color_scheme_purple">Purple</string>
    <string name="color_scheme_custom">Custom</string>
    <string name="color_scheme_eink">Greyscale (e-ink)</string>
    <string name="custom_square_colors">Custom square colors</string>
    <string name="custom_dark_square_color">Dark square</string>
    <string name="custom_light_square_color">Light square</string>
    <string name="choose_dark_square_color">Choose dark square color</string>
    <string name="choose_light_square_color">Choose light square color</string>
    <string name="color_hue">Hue</string>
    <string name="color_saturation">Saturation</string>
    <string name="color_lightness">Lightness</string>
    <string name="color_scheme_red">Red</string>
    <string name="color_scheme_yellow">Yellow</string>
    <string name="copied_clipboard_success">Game copied to clipboard successfully</string>
    <string name="gamepreferences">Game settings</string>
    <string name="globalpreferences">Global settings</string>
    <string name="hotspot_black">♚ Black</string>
    <string name="hotspot_connect">Connect</string>
    <string name="hotspot_connection_settings">Connection settings</string>
    <string name="hotspot_client">Client</string>
    <string name="hotspot_client_help">Turn Host off and connect to the host\'s WiFi hotspot.</string>
    <string name="hotspot_copy_ip">Copy IP address</string>
    <string name="hotspot_copy_ip_success">IP address copied to clipboard</string>
    <string name="hotspot_disconnect">Disconnect</string>
    <string name="hotspot_draw">Draw</string>
    <string name="hotspot_host">Host</string>
    <string name="hotspot_host_help">Turn Host on if this device is creating the WiFi hotspot.</string>
    <string name="hotspot_host_ip_hint">Host IP address</string>
    <string name="hotspot_local_ip_unavailable">Could not determine the local WiFi IP address.</string>
    <string name="hotspot_local_ip_value">Your IP address: %1$s</string>
    <string name="hotspot_local_wifi_client_help">Enter the host device\'s IP address on the same local WiFi network.</string>
    <string name="hotspot_local_wifi_host_help">Share this device\'s IP address with the other player on the same local WiFi network.</string>
    <string name="hotspot_local_wifi_share_host_help">Share this device\'s IP address with observers on the same local WiFi network.</string>
    <string name="hotspot_mode_hotspot">Hotspot</string>
    <string name="hotspot_mode_local_wifi">Local WiFi</string>
    <string name="hotspot_name_hint">Your name</string>
    <string name="hotspot_new">New</string>
    <string name="hotspot_resign">Resign</string>
    <string name="hotspot_share">Share</string>
    <string name="hotspot_share_host_help">Turn Host and Share on to broadcast this board to observers.</string>
    <string name="hotspot_status_connecting">Trying to connect</string>
    <string name="hotspot_status_disconnected">Your opponent is no longer connected</string>
    <string name="hotspot_status_draw_declined">Draw offer declined.</string>
    <string name="hotspot_status_draw_sent">Draw offer sent.</string>
    <string name="hotspot_status_host_ip_required">Enter the host IP address first.</string>
    <string name="hotspot_status_name_required">Enter your name first.</string>
    <string name="hotspot_status_observer_connected_host">An observer is connected.</string>
    <string name="hotspot_status_observing">Observing</string>
    <string name="hotspot_status_opponent_connected_client">Your opponent is connected. Wait for your opponent to start a new game.</string>
    <string name="hotspot_status_opponent_connected_host">Your opponent is connected. Start a new game.</string>
    <string name="hotspot_status_waiting">Waiting for opponent to connect</string>
    <string name="hotspot_status_waiting_observer">Waiting for observers to connect</string>
    <string name="hotspot_start_hosting">Start hosting</string>
    <string name="hotspot_stop_share">Stop sharing</string>
    <string name="hotspot_white">♔ White</string>
    <string name="ics_client_handle">Handle</string>
    <string name="ics_client_password">Password</string>
    <string name="ics_error">An error occurred. Please try again later.</string>
    <string name="ics_examine">Examine</string>
    <string name="ics_finger">Summary</string>
    <string name="ics_follow">Follow</string>
    <string name="ics_game_over">Game Over</string>
    <string name="ics_gamenumber">Game #</string>
    <string name="ics_history">History</string>
    <string name="ics_historygamenumber">History Game Number</string>
    <string name="ics_lost_connection">Connection to server is broken.</string>
    <string name="ics_match">Match</string>
    <string name="ics_menu_challenges">Challenges</string>
    <string name="ics_menu_console">Console</string>
    <string name="ics_menu_draw">Draw</string>
    <string name="ics_menu_flag">Flag</string>
    <string name="ics_menu_games">Games</string>
    <string name="ics_menu_players">Players</string>
    <string name="ics_menu_puzzlebot_mate">Puzzlebot mate</string>
    <string name="ics_menu_puzzlebot_study">Puzzlebot study</string>
    <string name="ics_menu_puzzlebot_tactics">Puzzlebot tactics</string>
    <string name="ics_menu_resign">Resign</string>
    <string name="ics_menu_resume">Resume</string>
    <string name="ics_menu_seek">Seek</string>
    <string name="ics_menu_stored">Stored</string>
    <string name="ics_menu_top_blitz">Top Blitz</string>
    <string name="ics_menu_top_standard">Top Standard</string>
    <string name="ics_offer_rematch">Offer REMATCH</string>
    <string name="ics_unfollow">UnFollow</string>
    <string name="menu_clip_pgn">Game to clip board</string>
    <string name="menu_flip">Rotate</string>
    <string name="menu_fromclip">Game from clip board</string>
    <string name="menu_game_settings">Game Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_load_game">Load game</string>
    <string name="menu_new">New Game</string>
    <string name="menu_prefs">Settings</string>
    <string name="menu_save_game">Save game to database</string>
    <string name="menu_set_clock">Set clock</string>
    <string name="msg_setup_castle_black">Black</string>
    <string name="msg_setup_castle_white">White</string>
    <string name="msg_setup_enpassant">En-passant square</string>
    <string name="msg_setup_turn">Turn</string>
    <string name="msg_setup_turn_black">black</string>
    <string name="msg_setup_turn_white">white</string>
    <string name="options_engine_oex_unavailable">No OEX engines found on this device.</string>
    <string name="options_play_android">Human vs Android</string>
    <string name="options_play_black">Black</string>
    <string name="options_play_human">Human vs Human</string>
    <string name="options_play_white">White</string>
    <string name="pref_fullscreen">Enable full screen</string>
    <string name="pref_fullscreen_desc">Recommended for small screens and landscape view; elements may fall off the screen otherwise</string>
    <string name="pref_night_mode">Night mode</string>
    <string name="pref_night_mode_desc">Force the app into night mode</string>
    <string name="pref_showCoords">Coordinates</string>
    <string name="pref_show_possible_moves">Show moves</string>
    <string name="pref_sound">Sound</string>
    <string name="pref_speech_pitch_desc">Speech pitch</string>
    <string name="pref_speech_rate_desc">Speech rate</string>
    <string name="pref_wakelock">Use wake lock</string>
    <string name="pref_wakelock_desc">This will prevent your phone going to sleep</string>
    <string name="title_pick_engine">Engine</string>
    <string name="lichess_challenge_rated">Rated</string>
    <string name="lichess_puzzle_difficulty">Difficulty</string>
    <string name="lichess_puzzle_angle">Theme</string>
    <string name="analysis_time_budget">Time budget per position (seconds)</string>
</resources>