<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dip"
    android:layout_gravity="center">


    <TableLayout
        android:id="@+id/TableOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow style="@style/MyRowStyle">
            <RadioGroup>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/options_play_android"
                    android:id="@+id/radioAndroid"
                    style="@style/MyRowTextStyle" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/options_play_human"
                    android:id="@+id/radioHuman"
                    style="@style/MyRowTextStyle" />
            </RadioGroup>
        </TableRow>

        <TableRow style="@style/MyRowStyle">
            <RadioGroup>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/options_play_white"
                    android:id="@+id/radioWhite"
                    style="@style/MyRowTextStyle" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/options_play_black"
                    android:id="@+id/radioBlack"
                    style="@style/MyRowTextStyle" />
            </RadioGroup>
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow>

            <Button
                android:id="@+id/ButtonCancel"
                android:text="@string/button_cancel"
                android:minWidth="100dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/ButtonOk"
                android:text="@string/button_ok"
                android:minWidth="100dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

    </TableLayout>

</LinearLayout>
