<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dip">
        <jwtc.android.chess.views.FixedDropdownView
            android:id="@+id/DropdownPieceSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <jwtc.android.chess.views.FixedDropdownView
            android:id="@+id/DropdownColorScheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.slider.Slider
            android:id="@+id/SliderSaturation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:value="1"
            android:valueFrom="0.5"
            android:valueTo="1.0"
            android:stepSize="0.05"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp" />

        <jwtc.android.chess.views.FixedDropdownView
            android:id="@+id/DropdownTileSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <CheckBox
            android:id="@+id/CheckBoxCoordinates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dip"
            android:text="@string/pref_showCoords" />

        <CheckBox
            android:id="@+id/CheckBoxShowMoves"
            android:text="@string/pref_show_possible_moves"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dip"/>
        <CheckBox
            android:id="@+id/CheckBoxUseSound"
            android:text="@string/pref_sound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dip"
            android:layout_marginLeft="8dip"
            android:layout_marginRight="8dip"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dip"
            android:layout_marginRight="8dip"
            android:layout_marginBottom="8dip"
            android:text="@string/pref_sound_desc"/>
        <com.google.android.material.slider.Slider
            android:id="@+id/SliderSpeechRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:value="1"
            android:valueFrom="0.5"
            android:valueTo="3.0"
            android:stepSize="0.25"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dip"
            android:layout_marginRight="8dip"
            android:layout_marginBottom="8dip"
            android:text="@string/pref_speech_rate_desc"/>
        <com.google.android.material.slider.Slider
            android:id="@+id/SliderSpeechPitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:value="1"
            android:valueFrom="0.5"
            android:valueTo="2.0"
            android:stepSize="0.25"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dip"
            android:layout_marginRight="8dip"
            android:layout_marginBottom="8dip"
            android:text="@string/pref_speech_pitch_desc"/>
        <CheckBox
            android:id="@+id/CheckBoxUseWakeLock"
            android:text="@string/pref_wakelock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dip"
            android:layout_marginLeft="8dip"
            android:layout_marginRight="8dip"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dip"
            android:layout_marginRight="8dip"
            android:layout_marginBottom="8dip"
            android:text="@string/pref_wakelock_desc"/>
        <CheckBox
            android:id="@+id/CheckBoxFullscreen"
            android:text="@string/pref_fullscreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dip"
            android:layout_marginLeft="8dip"
            android:layout_marginRight="8dip"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dip"
            android:layout_marginRight="8dip"
            android:layout_marginBottom="8dip"
            android:text="@string/pref_fullscreen_desc"/>
        <CheckBox
            android:id="@+id/CheckBoxForceNightMode"
            android:text="@string/pref_night_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dip"
            android:layout_marginLeft="8dip"
            android:layout_marginRight="8dip"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dip"
            android:layout_marginRight="8dip"
            android:layout_marginBottom="8dip"
            android:text="@string/pref_night_mode_desc"/>
    </LinearLayout>
</ScrollView>