<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:layout_gravity="center">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvGameResult"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:textSize="15sp" />

        <Button
            android:layout_width="wrap_content"
            android:text="@string/ics_offer_rematch"
            android:id="@+id/ButtonGameRematch"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            style="@style/ChessButton"/>


        <Button
            android:layout_width="wrap_content"
            android:text="@string/ics_examine"
            android:id="@+id/ButtonGameExamine"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            style="@style/ChessButton"/>

        <Button
            android:layout_width="wrap_content"
            android:text="@string/button_save"
            android:id="@+id/ButtonGameSave"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            style="@style/ChessButton"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/ButtonGameExit"
            android:text="@string/button_close" />

    </LinearLayout>
</ScrollView>

